fix: override all scrollbar styling

--- a/src/App.css
+++ b/src/App.css
@@ -15,22 +15,22 @@ html {
     scrollbar-gutter: stable;
 }
 
-html::-webkit-scrollbar {
-    width: 4px;
-    height: 4px;
+*::-webkit-scrollbar {
+    width: 0.25rem;
+    height: 0.25rem;
     position: absolute;
 }
 
-html::-webkit-scrollbar-track {
+*::-webkit-scrollbar-track {
     background: transparent;
 }
 
-html::-webkit-scrollbar-thumb {
+*::-webkit-scrollbar-thumb {
     background: var(--tr-100);
-    border-radius: 4px;
+    border-radius: 0.25rem;
 }
 
-html::-webkit-scrollbar-corner {
+*::-webkit-scrollbar-corner {
     background: transparent;
 }
 
